done fixed bug and happy coding

--- a/firebase.json
+++ b/firebase.json
@@ -1,40 +1,1 @@
-{
-  "flutter": {
-    "platforms": {
-      "android": {
-        "default": {
-          "projectId": "ppdb-pami-7651b",
-          "appId": "1:181278162179:android:cb20b6447968538911bd36",
-          "fileOutput": "android/app/google-services.json"
-        }
-      },
-      "ios": {
-        "default": {
-          "projectId": "ppdb-pami-7651b",
-          "appId": "1:181278162179:ios:b9790d75fe8ab85d11bd36",
-          "uploadDebugSymbols": false,
-          "fileOutput": "ios/Runner/GoogleService-Info.plist"
-        }
-      },
-      "macos": {
-        "default": {
-          "projectId": "ppdb-pami-7651b",
-          "appId": "1:181278162179:ios:b9790d75fe8ab85d11bd36",
-          "uploadDebugSymbols": false,
-          "fileOutput": "macos/Runner/GoogleService-Info.plist"
-        }
-      },
-      "dart": {
-        "lib/firebase_options.dart": {
-          "projectId": "ppdb-pami-7651b",
-          "configurations": {
-            "android": "1:181278162179:android:cb20b6447968538911bd36",
-            "ios": "1:181278162179:ios:b9790d75fe8ab85d11bd36",
-            "macos": "1:181278162179:ios:b9790d75fe8ab85d11bd36",
-            "web": "1:181278162179:web:e9fbe973e313eecb11bd36"
-          }
-        }
-      }
-    }
-  }
-}
+{"flutter":{"platforms":{"android":{"default":{"projectId":"ppdb-pami-e93a1","appId":"1:937783297516:android:6c1de0d8addb8d454d6cc9","fileOutput":"android/app/google-services.json"}},"ios":{"default":{"projectId":"ppdb-pami-e93a1","appId":"1:937783297516:ios:b3828368f50260194d6cc9","uploadDebugSymbols":true,"fileOutput":"ios/Runner/GoogleService-Info.plist"}},"macos":{"default":{"projectId":"ppdb-pami-e93a1","appId":"1:937783297516:ios:b3828368f50260194d6cc9","uploadDebugSymbols":true,"fileOutput":"macos/Runner/GoogleService-Info.plist"}},"dart":{"lib/firebase_options.dart":{"projectId":"ppdb-pami-e93a1","configurations":{"android":"1:937783297516:android:6c1de0d8addb8d454d6cc9","ios":"1:937783297516:ios:b3828368f50260194d6cc9","macos":"1:937783297516:ios:b3828368f50260194d6cc9","web":"1:937783297516:web:f33e497ba7a713eb4d6cc9","windows":"1:937783297516:web:16aef200d2526ceb4d6cc9"}}}}}}
